--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "datatables": "^1.10.18",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "laravel-mix-purgecss": "^5.0.0",
         "popper.js": "^1.12",
+        "purify-css": "^1.2.5",
+        "purifycss-webpack": "^0.7.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "select2": "^4.0.13",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
-    }
+    },
+    "dependencies": {}
 }
